syntax="proto3";
option java_multiple_files = true;
package networking.customers;

message ProtobufMessage{
  string massageOrObject = 1;
}

service CustomerService{
  rpc createCustomer(ProtobufMessage) returns (ProtobufMessage);
}